@@ -36,18 +36,18 @@ content =
 ; File::ShareDir::Install::_scan_share_dir unconditionally skips all dotfiles.
 [GenerateFile / gitignore]
 filename = .gitignore
-is_template = 0
+is_template = 1
 content = /.build/
 content = !.gitignore
-content = /{{$dist->name}}-*
+content = /{{ '{{$dist->name}}-*' }}
 
 [GenerateFile / Changes]
 filename = Changes
-is_template = 0
-content = Revision history for {{ '{{$dist->name}}' }}
+is_template = 1 ; needed for whitespace
+content = Revision history for {{ q[{{ '{{$dist->name}}' }}] }}
 content =
-content = {{ '{{$NEXT}}' }}
-content = {{ '          - Initial release.' }}
+content = {{ q[{{ '{{$NEXT}}' }}] }}
+content = {{ q[{{ '          - Initial release.' }}] }}
 
 [GenerateFile / clean-namespaces.t]
 filename = xt/release/clean-namespaces.t
